rename create, drop and dump scripts

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,10 @@
 FROM postgres:16
 
-COPY scripts/dump.sh /usr/local/bin/dump.sh
-RUN chmod +x /usr/local/bin/dump.sh
+COPY scripts/dump-database.sh /usr/local/bin/dump-database.sh
+RUN chmod +x /usr/local/bin/dump-database.sh
 
-COPY scripts/create.sh /usr/local/bin/create.sh
-RUN chmod +x /usr/local/bin/create.sh
+COPY scripts/create-bundle.sh /usr/local/bin/create-bundle.sh
+RUN chmod +x /usr/local/bin/create-bundle.sh
 
-COPY scripts/drop.sh /usr/local/bin/drop.sh
-RUN chmod +x /usr/local/bin/drop.sh
+COPY scripts/drop-bundle.sh /usr/local/bin/drop-bundle.sh
+RUN chmod +x /usr/local/bin/drop-bundle.sh
