--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   postgresql:
     build:
@@ -15,7 +14,7 @@ services:
 networks:
   database:
     name: "database"
-    external: false
+    external: ${EXTERNAL_NETWORK_DATABASE}
   traefik:
     external: true
 
