--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,8 @@
 FROM postgres:16
 
-COPY scripts/dump-database.sh /usr/local/bin/dump-database.sh
-RUN chmod +x /usr/local/bin/dump-database.sh
+COPY scripts/* /usr/local/bin/
 
-COPY scripts/create-bundle.sh /usr/local/bin/create-bundle.sh
+RUN chmod +x /usr/local/bin/create-admin.sh
 RUN chmod +x /usr/local/bin/create-bundle.sh
-
-COPY scripts/drop-bundle.sh /usr/local/bin/drop-bundle.sh
 RUN chmod +x /usr/local/bin/drop-bundle.sh
+RUN chmod +x /usr/local/bin/dump-database.sh
