mount a host folder for backups

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     restart: always
     volumes:
       - postgresql:/var/lib/postgresql
+      - ./backups:/var/backups
 
 networks:
   database:
