add a restore script

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,3 +6,4 @@ RUN chmod +x /usr/local/bin/create-admin.sh
 RUN chmod +x /usr/local/bin/create-bundle.sh
 RUN chmod +x /usr/local/bin/drop-bundle.sh
 RUN chmod +x /usr/local/bin/dump-database.sh
+RUN chmod +x /usr/local/bin/restore-database.sh
