update the helper scripts

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,12 @@ FROM postgres:16
 
 COPY scripts/* /usr/local/bin/
 
-RUN chmod +x /usr/local/bin/create-admin.sh
-RUN chmod +x /usr/local/bin/create-bundle.sh
-RUN chmod +x /usr/local/bin/drop-bundle.sh
-RUN chmod +x /usr/local/bin/dump-database.sh
-RUN chmod +x /usr/local/bin/restore-database.sh
+RUN chmod +x /usr/local/bin/create-bundle
+RUN chmod +x /usr/local/bin/create-database
+RUN chmod +x /usr/local/bin/create-user
+RUN chmod +x /usr/local/bin/drop-bundle
+RUN chmod +x /usr/local/bin/drop-database
+RUN chmod +x /usr/local/bin/drop-user
+RUN chmod +x /usr/local/bin/dump-database
+RUN chmod +x /usr/local/bin/restore-database
+RUN chmod +x /usr/local/bin/set-admin
